# immich-lib

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml  update-homebrew.yml
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-ROADMAP.md  v1.1-ROADMAP.md  v1.2-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-duplicate-discovery/: 02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-metadata-scoring/: 03-01-PLAN.md  03-01-SUMMARY.md
.planning/phases/04-analysis-stage/: 04-01-PLAN.md  04-01-SUMMARY.md
.planning/phases/05-execution-stage/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-RESEARCH.md
.planning/phases/06-synthetic-integration-tests/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-01-PLAN.md  06-02-01-SUMMARY.md  06-03-01-PLAN.md  06-03-01-SUMMARY.md  06-03-02-PLAN.md  06-03-02-SUMMARY.md  06-03-03-PLAN.md  06-03-03-SUMMARY.md  06-03.1-01-PLAN.md  (+14 more)
examples/: test_connection.rs
src/: client.rs  error.rs  executor.rs  letterbox.rs  lib.rs  scoring.rs
src/models/: album.rs  asset.rs  duplicate.rs  execution.rs  exif.rs  mod.rs
src/testing/: detector.rs  fixtures.rs  generator.rs  mod.rs  report.rs  scenarios.rs
tests/: integration_tests.rs  scoring_tests.rs
tests/docker/: .env.test  .gitignore  bootstrap.sh  docker-compose.yml  record-fixtures.sh  run-validation.sh  seed-fixtures.sh  teardown.sh  test-restore.sh  verification-report.txt  verify-consolidation.sh  verify-winners.sh  wait-for-ready.sh
tests/fixtures/: MANIFEST.md
tests/integration/: assertions.rs  conflict_tests.rs  consolidation_tests.rs  edge_case_tests.rs  fixtures.rs  harness.rs  mod.rs  winner_tests.rs
(+58 files in other folders)
