[package]
name = "immich-lib"
version = "0.1.0"
edition = "2024"
description = "A Rust library for the Immich API focused on duplicate management"
license = "MIT"

[lib]
name = "immich_lib"
path = "src/lib.rs"

[[bin]]
name = "immich-dupes"
path = "src/bin/immich_dupes/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "multipart", "rustls-tls"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
governor = "0.6"
indicatif = "0.17"
nonzero_ext = "0.3"

# Binary dependencies
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
directories = "5"
toml = "0.8"
dialoguer = "0.11"

# Fixture generation
image = "0.25"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "test_connection"
